--- a/Interface/mainwindow.ui
+++ b/Interface/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>964</width>
-    <height>635</height>
+    <width>1732</width>
+    <height>918</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,8 +19,8 @@
      <rect>
       <x>220</x>
       <y>0</y>
-      <width>751</width>
-      <height>561</height>
+      <width>1511</width>
+      <height>821</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -32,9 +32,9 @@
     <widget class="QSlider" name="horizontalSlider">
      <property name="geometry">
       <rect>
-       <x>70</x>
-       <y>520</y>
-       <width>491</width>
+       <x>230</x>
+       <y>790</y>
+       <width>1071</width>
        <height>20</height>
       </rect>
      </property>
@@ -45,7 +45,7 @@
     <widget class="QPushButton" name="SongsView_Button">
      <property name="geometry">
       <rect>
-       <x>500</x>
+       <x>10</x>
        <y>10</y>
        <width>130</width>
        <height>29</height>
@@ -67,7 +67,7 @@
       <x>0</x>
       <y>0</y>
       <width>221</width>
-      <height>561</height>
+      <height>821</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -79,9 +79,9 @@
     <widget class="QCheckBox" name="checkBox">
      <property name="geometry">
       <rect>
-       <x>50</x>
-       <y>490</y>
-       <width>131</width>
+       <x>40</x>
+       <y>770</y>
+       <width>151</width>
        <height>22</height>
       </rect>
      </property>
@@ -92,7 +92,7 @@
       </font>
      </property>
      <property name="text">
-      <string>Pagination</string>
+      <string>No pagination</string>
      </property>
     </widget>
     <widget class="QPushButton" name="pushButton">
@@ -120,15 +120,15 @@
        <x>10</x>
        <y>70</y>
        <width>200</width>
-       <height>321</height>
+       <height>581</height>
       </rect>
      </property>
     </widget>
     <widget class="QLabel" name="label">
      <property name="geometry">
       <rect>
-       <x>60</x>
-       <y>420</y>
+       <x>50</x>
+       <y>700</y>
        <width>101</width>
        <height>16</height>
       </rect>
@@ -146,7 +146,7 @@
      <property name="geometry">
       <rect>
        <x>50</x>
-       <y>450</y>
+       <y>730</y>
        <width>131</width>
        <height>21</height>
       </rect>
@@ -169,7 +169,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>964</width>
+     <width>1732</width>
      <height>21</height>
     </rect>
    </property>
