--- a/Interface/mainwindow.ui
+++ b/Interface/mainwindow.ui
@@ -20,7 +20,7 @@
       <x>220</x>
       <y>0</y>
       <width>1511</width>
-      <height>821</height>
+      <height>911</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -33,7 +33,7 @@
      <property name="geometry">
       <rect>
        <x>230</x>
-       <y>790</y>
+       <y>830</y>
        <width>1071</width>
        <height>20</height>
       </rect>
@@ -45,7 +45,7 @@
     <widget class="QPushButton" name="SongsView_Button">
      <property name="geometry">
       <rect>
-       <x>10</x>
+       <x>160</x>
        <y>10</y>
        <width>130</width>
        <height>29</height>
@@ -60,6 +60,42 @@
       <string>All Songs View</string>
      </property>
     </widget>
+    <widget class="QTableView" name="tableView">
+     <property name="geometry">
+      <rect>
+       <x>160</x>
+       <y>70</y>
+       <width>1212</width>
+       <height>671</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="PlayButton">
+     <property name="geometry">
+      <rect>
+       <x>710</x>
+       <y>780</y>
+       <width>51</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="StopButton">
+     <property name="geometry">
+      <rect>
+       <x>770</x>
+       <y>780</y>
+       <width>51</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
    </widget>
    <widget class="QFrame" name="frame_2">
     <property name="geometry">
@@ -67,7 +103,7 @@
       <x>0</x>
       <y>0</y>
       <width>221</width>
-      <height>821</height>
+      <height>901</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -80,7 +116,7 @@
      <property name="geometry">
       <rect>
        <x>40</x>
-       <y>770</y>
+       <y>840</y>
        <width>151</width>
        <height>22</height>
       </rect>
@@ -120,15 +156,15 @@
        <x>10</x>
        <y>70</y>
        <width>200</width>
-       <height>581</height>
+       <height>671</height>
       </rect>
      </property>
     </widget>
     <widget class="QLabel" name="label">
      <property name="geometry">
       <rect>
-       <x>50</x>
-       <y>700</y>
+       <x>60</x>
+       <y>760</y>
        <width>101</width>
        <height>16</height>
       </rect>
@@ -146,7 +182,7 @@
      <property name="geometry">
       <rect>
        <x>50</x>
-       <y>730</y>
+       <y>790</y>
        <width>131</width>
        <height>21</height>
       </rect>
@@ -175,31 +211,6 @@
    </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
-  <widget class="QToolBar" name="toolBar">
-   <property name="sizePolicy">
-    <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-     <horstretch>0</horstretch>
-     <verstretch>0</verstretch>
-    </sizepolicy>
-   </property>
-   <property name="windowTitle">
-    <string>toolBar</string>
-   </property>
-   <attribute name="toolBarArea">
-    <enum>BottomToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
-   <addaction name="actionPrevious"/>
-   <addaction name="separator"/>
-   <addaction name="actionPlay"/>
-   <addaction name="separator"/>
-   <addaction name="actionStop"/>
-   <addaction name="separator"/>
-   <addaction name="actionNext"/>
-   <addaction name="separator"/>
-  </widget>
   <action name="actionPlay">
    <property name="icon">
     <iconset resource="resources.qrc">
